--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,21 +13,25 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "maska": "^2.1.10",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
+    "v-mask": "^2.3.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue-text-mask": "^6.1.2",
+    "vuetify": "^3.3.14"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.2",
-    "@vitejs/plugin-vue": "^4.3.1",
+    "@rushstack/eslint-patch": "^1.3.3",
+    "@vitejs/plugin-vue": "^4.3.3",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
-    "eslint": "^8.46.0",
+    "eslint": "^8.47.0",
     "eslint-plugin-cypress": "^2.14.0",
-    "eslint-plugin-vue": "^9.16.1",
+    "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.2",
     "start-server-and-test": "^2.0.0",
     "vite": "^4.4.9",
     "vitest": "^0.34.2"
